package ice.ice;

public abstract class Emission{

}
